# TIDDIT

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  DBSCAN.py  Dockerfile  INSTALL  INSTALL.sh  Makefile.am  Makefile.in  NEWS  README.md  Singularity  TIDDIT.py  TIDDIT.simg  TIDDIT_clustering.py  config.status  configure  configure.ac  pyproject.toml  setup.py
FindTranslocations/src/: FindTranslocations.cpp
extract_variants/: README.md  assemblatron.nf  assemble_variants.py  extract_variants.py  slurm.config  update_TIDDIT_vcf.py
lib/: CMakeLists.txt
lib/bamtools/src/api/: BamAlignment.cpp  BamAlignment.h  BamConstants.h
m4/: acx_mpi.m4  boost.m4
scipts/: FindCNV.py  build_db.py  compute_intersect.py  generate_histogram.py  genotype_vcf.py  get_resources_hg19.sh  query_db.py  readVCF.py  screen_FT.py  screen_results.py
scripts_perl/: simplify_varaitions.pl
src/: DBSCAN.py  FRC_align.cpp  FindTranslocations.cpp  Makefile  Makefile.am  Makefile.in  TIDDIT.cpp  TIDDIT_calling.py  TIDDIT_clustering.py  TIDDIT_coverage.py  TIDDIT_filtering.py  TIDDIT_signals.py  common.h  radix.h  setup.py
src/dataStructures/: Translocations.cpp  Translocations.h
src/data_structures/: AnalyseRegion.cpp  AutoConfig.cpp  Contig.cpp  Contig.h  CoverageModule.cpp  ExtractModule.cpp  FRC.cpp  FRC.h  Features.cpp  Features.h  ProgramModules.h  Translocation.cpp  Translocation.h  Translocations.cpp  Translocations.h  VcfBedInput.cpp  extract.cpp  findTranslocationsOnTheFly.cpp
src/errors/: Data_Exception.cpp  Data_Exception.h  Data_Not_Found.cpp  Data_Not_Found.h  File_Not_Found.cpp  File_Not_Found.h  Generic_Exception.cpp  Generic_Exception.h  Incorrect_Format.cpp  Incorrect_Format.h
tiddit/: DBSCAN.py  __main__.py  graphlib.pyx  main.py  silverfish.pyx  tiddit_cluster.py  tiddit_cluster.pyx  tiddit_contig_analysis.pyx  tiddit_coverage.pyx  tiddit_coverage_analysis.pyx  tiddit_gc.pyx  tiddit_signal.pyx  tiddit_stats.py  tiddit_variant.pyx  tiddit_vcf_header.py
variant_assembly_filter/: README.md  README.md~  assemblatron.nf  assemble_variants.py  compute_contig_support.py  extract_variants.py  slurm.config  update_TIDDIT_vcf.py
versioned_singularity/: README.md  TIDDIT-2.7.1  TIDDIT.2.10.0  TIDDIT.2.12.0  TIDDIT.2.12.1  TIDDIT.2.7.1  TIDDIT.2.8.0  TIDDIT.2.8.1
wrappers/: README.md  TIDDIT_multi_sample.nf  TIDDIT_multi_sample.py
